pic process fourier

--- a/03-image-processing/doc/06-图片直方图.md
+++ b/03-image-processing/doc/06-图片直方图.md
@@ -7,3 +7,9 @@
 例如某些图片只是局限于某个像素范围。例如：图片越亮图片像素值越大。但是好的图片有图片的各个部分。需要将图片拉升到两端。这就要用到直方图的概念。这也是来提高对比对的方法。
 
 <image src="image/06-01.png"/>
+
+### 直方图投影
+
+`<<Indexing via color histograms>>`要来找图片部分，或者图像中感兴趣的部分。简单来说，建立和我们输入图片同样尺寸大小图片（单通道的）每个像素与之对应的是属于我们对象的。更简单说，输出感兴趣部分图片比剩下部分更白。直方图投影是使用`camshift算法`。
+
+要怎么做？建立包含感兴趣部分的直方图（我们例子指背景，去掉运动员和其他部分）。这部分应该为了更好的结果尽量填满图片。颜色直方图比灰度直方图更好，因为物体颜色比灰度更好的定义物体。我们尽可能保留所有的背景，并显示它。以合适阀值输出结果能够只保留背景部分。
